# amp_crew

./: README.md  pyproject.toml
src/smart_shopping_assistant/: crew.py  main.py
src/smart_shopping_assistant/config/: agents.yaml  tasks.yaml
