[project]
name = "smart_shopping_assistant"
version = "0.1.0"
description = "smart_shopping_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "serpapi"
]

[project.scripts]
smart_shopping_assistant = "smart_shopping_assistant.main:run"
run_crew = "smart_shopping_assistant.main:run"
train = "smart_shopping_assistant.main:train"
replay = "smart_shopping_assistant.main:replay"
test = "smart_shopping_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
